feat: adding front end
