# api/src/controller/PersonController.py
@@ -20,3 +20,20 @@ class PersonController:
     )
     def get(self, params):
         return self.service.person.findPerson(params), HttpStatus.OK
+
+
+@Controller(
+    url = '/person',
+    tag = 'Person',
+    description = 'Person controller'
+    , logRequest = True
+    , logResponse = True
+)
+class PersonAllController:
+
+    @ControllerMethod(url = '/all',
+        requestParamClass=[PersonDto.PersonQueryAllDto],
+        responseClass=[[PersonDto.PersonResponseDto]]
+    )
+    def get(self, params):
+        return self.service.person.findAllPerson(params), HttpStatus.OK
