# api/src/dto/RelativesDto.py
@@ -1,10 +1,24 @@
 class RelativesQueryDto:
-    def __init__(self, name = None):
+    def __init__(self, 
+        key= None, 
+        name = None
+    ):
+        self.key = key
         self.name = name
+
+
+class RelativesQueryAllDto:
+    def __init__(self, 
+        keyList= None, 
+        nameList = None
+    ):
+        self.keyList = keyList
+        self.nameList = nameList
 
 
 class RelativesResponseDto:
     def __init__(self, 
+        key= None, 
         name = None,
         mother = None,
         father = None,
@@ -13,6 +27,7 @@ class RelativesResponseDto:
         wife = None,
         husband = None
     ):
+        self.key = key
         self.name = name
         self.mother = mother
         self.father = father
